# github-trending-api

./: .gitignore  README.md  github-languages.py  package.json  pyproject.toml  requirements.txt
.github/workflows/: update_languages.yaml
src/: index.js  languages.json  spoken-languages.json
src/functions/: repositories.js
